<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.kttdevelopment</groupId>
    <artifactId>rexedia</artifactId>
    <version>00.00.00</version>
    <packaging>jar</packaging>

    <url>https://github.com/Ktt-Development/rexedia</url>

    <scm>
        <url>https://github.com/Ktt-Development/rexedia</url>
        <connection>scm:git:git@github.com:Ktt-Development/rexedia.git</connection>
        <developerConnection>${project.scm.connection}</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.kttdevelopment.rexedia.Main</mainClass>
                        </manifest>
                        <manifestEntries>
                            <Built-By>Ktt Development</Built-By>
                        </manifestEntries>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <outputDirectory>${project.build.directory}/jar</outputDirectory>
                    <appendAssemblyId>false</appendAssemblyId>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <useFile>false</useFile>
                    <trimStackTrace>false</trimStackTrace>
                    <reuseForks>false</reuseForks>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.4</version>
        </dependency>

        <dependency>
            <groupId>com.amihaiemil.web</groupId>
            <artifactId>eo-yaml</artifactId>
            <version>5.1.6</version>
        </dependency>

        <!-- core -->
        <dependency>
            <groupId>com.kttdevelopment.core</groupId>
            <artifactId>class-util</artifactId>
            <version>e1cf2c088f</version>
        </dependency>

        <dependency>
            <groupId>com.kttdevelopment.core</groupId>
            <artifactId>exceptions-util</artifactId>
            <version>e1cf2c088f</version>
        </dependency>

        <!-- tests -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.kttdevelopment.core</groupId>
            <artifactId>test-util</artifactId>
            <version>e1cf2c088f</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
